--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(Simultion)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Simultion main.cpp)
+add_executable(Simultion main.cpp
+        Human.h
+        Game_Rule.h
+        Game_Rule.cpp)
